force-app/main/default/objects/TREND_Invoice_History__c/TREND_Invoice_History__c.object-meta.xml
<CustomObject>
    <label>TREND Invoice History</label>
    <nameField>
        <displayFormat>TIH-{0000}</displayFormat>
        <label>TREND Invoice History  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TREND Invoice History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>