force-app/main/default/objects/TREND_Invoice_History__c/fields/Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>Agent_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Code</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TREND Invoice History</relationshipLabel>
    <relationshipName>TREND_Invoice_History</relationshipName>
    <type>Lookup</type>
</CustomField>