force-app/main/default/objects/TREND_Invoice_History__c/fields/Invoice_To__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To__c</fullName>
    <label>Invoice To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>