force-app/main/default/objects/TREND_Invoice_History__c/fields/Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Office_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Code</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TREND Invoice History</relationshipLabel>
    <relationshipName>TREND_Invoice_History</relationshipName>
    <type>Lookup</type>
</CustomField>