force-app/main/default/objects/TREND_Invoice_History__c/fields/SubscriptionID__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>TREND Invoice History</relationshipLabel>
    <relationshipName>TREND_Invoice_History</relationshipName>
    <type>Lookup</type>
</CustomField>